Support for autosizing of ZK java heap based on linode's RAM

--- a/zk-image-example.conf
+++ b/zk-image-example.conf
@@ -44,7 +44,7 @@ KERNEL_FOR_IMAGE=138
 # Time taken for transferring files from local system is another factor.
 # List all datacenters with this command:
 #	./zookeeper-cluster-linode.sh datacenters api_env_production.conf
-DATACENTER_FOR_IMAGE=9
+DATACENTER_FOR_IMAGE="newark"
 # or alternatively, specify the LOCATION or ABBR returned by avail.datacenters (case does not matter)
 # DATACENTER_FOR_IMAGE="Newark, NJ, USA"
 # DATACENTER_FOR_IMAGE="newark"
@@ -106,9 +106,16 @@ ZOOKEEPER_INSTALL_DIRECTORY=/opt
 
 ZOOKEEPER_USER=zk
 
-# Set this to about 80% of the linode's available RAM.  
-# A high heap size prevents swapping to disk, which is terrible for zookeeper's performance.
-ZOOKEEPER_MAX_HEAP_SIZE=160M
-ZOOKEEPER_MIN_HEAP_SIZE=160M
+# Min and max heap size for the JVM hosting the zookeeper daemon.
+# Set the max to about 75% of the linode's available RAM, but never too high.
+# A high heap size increases the possibility of swapping to disk, 
+# which is terrible for zookeeper's performance.
+# After allocating JVM's heap size, there should be enough memory left for 
+# the JVM process itself and the OS's processes and caches.
+# Min can be <= max. Recommended to set them equal.
+# If they're equal, the entire max value is committed by OS instead of just 
+# keeping it reserved, and there will be fewer delays due to memory allocation by OS.
+ZOOKEEPER_MAX_HEAP_SIZE=75%
+ZOOKEEPER_MIN_HEAP_SIZE=75%
 
 
