Changed default datacenter to Newark

--- a/storm-cluster-example.conf
+++ b/storm-cluster-example.conf
@@ -13,7 +13,7 @@ CLUSTER_NAME='storm-cluster-example'
 # This can be any datacenter, but cluster creation may be faster 
 # if it's created in the same datacenter as the image.
 # Time taken for transferring files from local system is another factor.
-DATACENTER_FOR_CLUSTER=9
+DATACENTER_FOR_CLUSTER="newark"
 # or alternatively, specify the LOCATION or ABBR returned by avail.datacenters (case does not matter)
 # DATACENTER_FOR_CLUSTER="Newark, NJ, USA"
 # DATACENTER_FOR_CLUSTER="newark"
@@ -63,12 +63,9 @@ NODE_ROOT_PASSWORD=
 NODE_ROOT_SSH_PUBLIC_KEY=
 NODE_ROOT_SSH_PRIVATE_KEY=
 
-
-# This is the sudo password of user on the cluster manager machine where script is running.
-# This is required to modify the cluster manager machine's /etc/hosts to include cluster node hostnames.
-CLUSTER_MANAGER_NODE_PASSWORD=
-
-
+# Public and private hostnames for nodes.
+# The private hostnames become the actual hostnames of the nodes, while
+# the public hostnames are just entries in each node's /etc/hosts.
 NIMBUS_NODE_PUBLIC_HOSTNAME=$CLUSTER_NAME-public-nimbus
 NIMBUS_NODE_PRIVATE_HOSTNAME=$CLUSTER_NAME-private-nimbus
 
@@ -85,6 +82,9 @@ CLIENT_NODES_PRIVATE_HOSTNAME_PREFIX=$CLUSTER_NAME-private-client
 # this out so that only private IPs are used. 
 CLUSTER_MANAGER_USES_PUBLIC_IP=true
 
+# This is the sudo password of user on the cluster manager machine where script is running.
+# This is required to modify the cluster manager machine's /etc/hosts to include cluster node hostnames.
+CLUSTER_MANAGER_NODE_PASSWORD=
 
 # The zookeeper conf file path *should* include a directory (even if it's just ./), because it gets included as a source file
 # in the script.
