--- a/storm-image-example.conf
+++ b/storm-image-example.conf
@@ -26,7 +26,7 @@ KERNEL_FOR_IMAGE=138
 # if the image is created in the same datacenter where cluster will be
 # created.
 # Time taken for transferring files from local system is another factor.
-DATACENTER_FOR_IMAGE=9
+DATACENTER_FOR_IMAGE="newark"
 # or alternatively, specify the LOCATION or ABBR returned by avail.datacenters (case does not matter)
 # DATACENTER_FOR_IMAGE="Newark, NJ, USA"
 # DATACENTER_FOR_IMAGE="newark"
@@ -76,15 +76,9 @@ IMAGE_ADMIN_SSH_AUTHORIZED_KEYS=
 # to create additional disks if required.
 IMAGE_DISK_SIZE=5000
 
-
-
-# Automated OS upgrade has been surprisingly troublesome. Problems like grub package upgrade requires
-# user interaction to select a device because it detects a hard disk identifier change (possibly due to 
-# all the cloning and snapshotting), but since it's a silent upgrade, it simply runs in an endless
-# loop showing the same errors.
-# Even a hack like explicitly running grub-install first before upgrading didn't solve it.
-# Recommend not to use this until all problems are resolved.
-UPGRADE_OS=no
+# Upgrades the OS before installing any software.
+# Set to yes for production, no for simulator (because of complications with grub install)
+UPGRADE_OS=yes
 
 INSTALL_STORM_DISTRIBUTION=./apache-storm-0.9.5.tar.gz
 
