--- a/zk-cluster-example.conf
+++ b/zk-cluster-example.conf
@@ -14,7 +14,7 @@ CLUSTER_NAME='zk-cluster-example'
 # if the image is created in the same datacenter where cluster will be
 # created.
 # Time taken for transferring files from local system is another factor.
-DATACENTER_FOR_CLUSTER=9
+DATACENTER_FOR_CLUSTER="newark"
 # or alternatively, specify the LOCATION or ABBR returned by avail.datacenters (case does not matter)
 # DATACENTER_FOR_CLUSTER="Newark, NJ, USA"
 # DATACENTER_FOR_CLUSTER="newark"
@@ -36,15 +36,20 @@ DATACENTER_FOR_CLUSTER=9
 # Anything > 19 nodes would probably be counterproductive, because zookeeper
 # works on a quorum principle where writes to one node are distributed to all
 # other nodes.
-# Example: To create 3 nodes - a 1 GB, a 2 GB and a 4 GB
+#
+# Examples: 
+# 1. To create 3 1GB nodes
+# CLUSTER_SIZE="1GB:3"
+#
+# 2. To create 3 nodes of different plans - a 1 GB, a 2 GB and a 4 GB
 # CLUSTER_SIZE="1GB:1 2GB:1 4GB:1"
-CLUSTER_SIZE="1GB:1 2GB:1 4GB:1"
+CLUSTER_SIZE="1GB:3"
 
 
 
 # The image conf file to use as a template for creating nodes of this cluster.
 # Every node's disk will be a replica of this image.
-ZK_IMAGE_CONF=./zk-image-example.conf
+ZK_IMAGE_CONF=../zk-image-example/zk-image-example.conf
 
 
 NODE_DISK_SIZE=5000
