--- a/zk-image-example.conf
+++ b/zk-image-example.conf
@@ -63,8 +63,8 @@ IMAGE_ROOT_PASSWORD=
 # image will have this SSH key as an authorized user.
 # It can be overridden in each cluster's config file.
 # The private key file is used by script to ssh into nodes.
-IMAGE_ROOT_SSH_PUBLIC_KEY=
-IMAGE_ROOT_SSH_PRIVATE_KEY=
+IMAGE_ROOT_SSH_PUBLIC_KEY=/home/clustermgr/.ssh/clusterroot.pub
+IMAGE_ROOT_SSH_PRIVATE_KEY=/home/clustermgr/.ssh/clusterroot
 
 
 # **** OPTIONAL *****
@@ -89,7 +89,7 @@ IMAGE_ADMIN_PASSWORD=
 # ssh into nodes as IMAGE_ADMIN_USER.
 # This file can contain multiple public keys, just like a "authorized_keys" file.
 # All these keys will be appended to the image's "authorized_keys".
-IMAGE_ADMIN_SSH_AUTHORIZED_KEYS=
+IMAGE_ADMIN_SSH_AUTHORIZED_KEYS=/home/clustermgr/.ssh/clusteradmin.pub
 
 # Size of disk image in MB (max 24000). ~5GB is good enough for most
 # distributions, and allows enough leftover storage quota in every plan
@@ -98,7 +98,7 @@ IMAGE_DISK_SIZE=5000
 
 # Upgrades the OS before installing any software.
 # Set to yes for production, no for simulator (because of complications with grub install)
-UPGRADE_OS=no 
+UPGRADE_OS=yes
 
 INSTALL_ZOOKEEPER_DISTRIBUTION=./zookeeper-3.4.6.tar.gz
 
