Implemented enable/disable for ssh password authentication.

--- a/storm-image-example.conf
+++ b/storm-image-example.conf
@@ -45,6 +45,16 @@ IMAGE_ROOT_PASSWORD=
 IMAGE_ROOT_SSH_PUBLIC_KEY=
 IMAGE_ROOT_SSH_PRIVATE_KEY=
 
+# If this is "yes" (highly recommended), password based ssh authentication is disabled and key
+# based authentication is the only option for all
+# nodes created from this image.
+#
+# If this is "no", password based ssh authentication is enabled (even if
+# it was disabled by default in the distribution), and both password and key
+# based authentication are available on all nodes created from this image.
+#
+# This modifies the value of "PasswordAuthentication" in /etc/ssh/sshd_config.
+IMAGE_DISABLE_SSH_PASSWORD_AUTHENTICATION=yes
 
 # **** OPTIONAL *****
 #
