--- a/zk-image-example.conf
+++ b/zk-image-example.conf
@@ -66,6 +66,16 @@ IMAGE_ROOT_PASSWORD=
 IMAGE_ROOT_SSH_PUBLIC_KEY=/home/clustermgr/.ssh/clusterroot.pub
 IMAGE_ROOT_SSH_PRIVATE_KEY=/home/clustermgr/.ssh/clusterroot
 
+# If this is "yes" (highly recommended) password based ssh authentication is disabled and key
+# based authentication is the only option for all
+# nodes created from this image.
+#
+# If this is "no", password based ssh authentication is enabled (even if
+# it was disabled by default in the distribution), and both password and key
+# based authentication are available on all nodes created from this image.
+#
+# This modifies the value of "PasswordAuthentication" in /etc/ssh/sshd_config.
+IMAGE_DISABLE_SSH_PASSWORD_AUTHENTICATION=yes
 
 # **** OPTIONAL *****
 # A username for administrative purposes. This username can be used by
@@ -80,6 +90,8 @@ IMAGE_ADMIN_USER=
 # Password for IMAGE_ADMIN_USER. 
 # This should not be empty. If it is, it's considered a validation error
 # and image creation will not proceed.
+# 
+# Make this a really strong password, especially if IMAGE_DISABLE_SSH_PASSWORD_AUTHENTICATION=no
 # If IMAGE_ADMIN_USER is empty, this is not used.
 IMAGE_ADMIN_PASSWORD=
 
