Moving CLUSTER_MANAGER_NODE_PASSWORD to api_env.conf to avoid repeating it in every cluster conf file and increasing risk of password exposure.

--- a/api_env_example.conf
+++ b/api_env_example.conf
@@ -2,3 +2,7 @@
 # without enclosing it in quotes or double quotes.
 export LINODE_KEY=
 export LINODE_API_URL="https://api.linode.com/"
+
+# This is the password of sudo user on the cluster manager machine where script is running.
+# This is required to modify the cluster manager machine's /etc/hosts to include cluster node hostnames.
+export CLUSTER_MANAGER_NODE_PASSWORD=
