Make clusteradmin user and password mandatory.

--- a/storm-image-example.conf
+++ b/storm-image-example.conf
@@ -42,8 +42,8 @@ IMAGE_ROOT_PASSWORD=
 # Default root SSH public and private key file. All nodes in a cluster created from this
 # image will have this SSH key as an authorized user.
 # It can be overridden in each cluster's config file.
-IMAGE_ROOT_SSH_PUBLIC_KEY=
-IMAGE_ROOT_SSH_PRIVATE_KEY=
+IMAGE_ROOT_SSH_PUBLIC_KEY=$HOME/.ssh/clusterroot.pub
+IMAGE_ROOT_SSH_PRIVATE_KEY=$HOME/.ssh/clusterroot
 
 # If this is "yes" (highly recommended), password based ssh authentication is disabled and key
 # based authentication is the only option for all
@@ -56,30 +56,28 @@ IMAGE_ROOT_SSH_PRIVATE_KEY=
 # This modifies the value of "PasswordAuthentication" in /etc/ssh/sshd_config.
 IMAGE_DISABLE_SSH_PASSWORD_AUTHENTICATION=yes
 
-# **** OPTIONAL *****
+# **** REQUIRED *****
 #
 # A username for administrative purposes. This username can be used by
 # all sysadmins / devops / developers to ssh into any node created from
 # this image.
-# This should not be 'root' or IMAGE_SCRIPT_SSH_USER.
-# If this is left empty, a user is not created.
-IMAGE_ADMIN_USER=
+# This should not be 'root'.
+IMAGE_ADMIN_USER=clusteradmin
 
-# **** REQUIRED if IMAGE_ADMIN_USER is defined *****
+# **** REQUIRED *****
 #
 # Password for IMAGE_ADMIN_USER. 
 # This should not be empty. If it is, it's considered a validation error
 # and image creation will not proceed.
-# If IMAGE_ADMIN_USER is empty, this is not used.
 IMAGE_ADMIN_PASSWORD=
 
-# **** OPTIONAL, used only if IMAGE_ADMIN_USER is defined *****
+# **** REQUIRED *****
 #
 # A file containing public keys of all users who are authorized to 
 # ssh into nodes as IMAGE_ADMIN_USER.
 # This file can contain multiple public keys, just like a "authorized_keys" file.
 # All these keys will be appended to the image's "authorized_keys".
-IMAGE_ADMIN_SSH_AUTHORIZED_KEYS=
+IMAGE_ADMIN_SSH_AUTHORIZED_KEYS=$HOME/.ssh/clusteradmin.pub
 
 # Size of disk image in MB (max 24000). ~5GB is good enough for most
 # distributions, and allows enough leftover storage quota in every plan
