Cluster manager security improvements - new keys, users, disable ssh password auth

--- a/storm-cluster-example.conf
+++ b/storm-cluster-example.conf
@@ -58,8 +58,26 @@ STORM_IMAGE_CONF=../storm-image-example/storm-image-example.conf
 
 NODE_DISK_SIZE=5000
 
-NODE_ROOT_PASSWORD=
+# A root password for all nodes of this cluster. 
+# If none is specified, the image's root password is retained.
+# If specified, it should contain at least two of these four character classes: 
+# lower case letters - upper case letters - numbers - punctuation.
+#
+# Some special characters may require escape prefixing and the password to be enclosed in
+# single or double quotes.
+# Some examples:
+# - for password with spaces, enclose in double quotes 
+#		NODE_ROOT_PASSWORD="a PassworD with spaces"
+#
+# - for password with double quotes, enclose in double quotes and prefix every double quote in the password with a backslash \ : 
+#		NODE_ROOT_PASSWORD="pswd_WITH_\"dbl\"_quotes"
+#
+# - for password with $, enclose in double quotes and prefix every $ in the password with a backslash \ : 
+#		NODE_ROOT_PASSWORD="pswd_with_\$a_"
+NODE_ROOT_PASSWORD=""
 
+# Keypair for ssh root authentication into nodes of this cluster.
+# If none is specified, the image's keypair is used.
 NODE_ROOT_SSH_PUBLIC_KEY=
 NODE_ROOT_SSH_PRIVATE_KEY=
 
@@ -79,7 +97,7 @@ CLIENT_NODES_PRIVATE_HOSTNAME_PREFIX=$CLUSTER_NAME-private-client
 # linode cloud and its private network. So it should use public IPs of linodes for 
 # all ssh communication.
 # If cluster manager machine is also a linode in same datacenter as cluster nodes, comment
-# this out so that only private IPs are used. 
+# this out or set it to false so that only private IPs are used. 
 CLUSTER_MANAGER_USES_PUBLIC_IP=false
 
 # The zookeeper conf file path *should* include a directory (even if it's just ./), because it gets included as a source file
