--- a/zk-cluster-example.conf
+++ b/zk-cluster-example.conf
@@ -57,7 +57,21 @@ NODE_DISK_SIZE=5000
 # Specify a root password for the nodes. 
 # If this is empty, the root password will be the root password of the image
 # from which nodes are created.
-NODE_ROOT_PASSWORD=
+# If specified, it should contain at least two of these four character classes: 
+# lower case letters - upper case letters - numbers - punctuation.
+#
+# Some special characters may require escape prefixing and the password to be enclosed in
+# single or double quotes.
+# Some examples:
+# - for password with spaces, enclose in double quotes 
+#		NODE_ROOT_PASSWORD="a PassworD with spaces"
+#
+# - for password with double quotes, enclose in double quotes and prefix every double quote in the password with a backslash \ : 
+#		NODE_ROOT_PASSWORD="pswd_WITH_\"dbl\"_quotes"
+#
+# - for password with $, enclose in double quotes and prefix every $ in the password with a backslash \ : 
+#		NODE_ROOT_PASSWORD="pswd_with_\$a_"
+NODE_ROOT_PASSWORD=""
 
 # Specify a SSH public key file and private key file for root user authentication. 
 # If this is empty, the keys will be the keys of the image
@@ -73,7 +87,7 @@ PRIVATE_HOST_NAME_PREFIX=c1-pri-zknode
 # linode cloud and its private network. So it should use public IPs of linodes for 
 # all ssh communication.
 # If cluster manager machine is also a linode in same datacenter as cluster nodes, comment
-# this out so that only private IPs are used. 
+# this out or set it to false so that only private IPs are used. 
 CLUSTER_MANAGER_USES_PUBLIC_IP=false
 
 ZOOKEEPER_LEADER_CONNECTION_PORT=2888
