--- a/zk-image-example.conf
+++ b/zk-image-example.conf
@@ -55,7 +55,21 @@ DATACENTER_FOR_IMAGE="newark"
 # Default root password for all nodes in cluster created from this image.
 # It should contains at least two of these four character classes: lower case letters - upper case letters - numbers - punctuation
 # It can be overridden in each cluster's config file.
-IMAGE_ROOT_PASSWORD=
+# It should contain at least two of these four character classes: 
+# lower case letters - upper case letters - numbers - punctuation.
+#
+# Some special characters may require escape prefixing and the password to be enclosed in
+# single or double quotes.
+# Some examples:
+# - for password with spaces, enclose in double quotes 
+#		IMAGE_ROOT_PASSWORD="a PassworD with spaces"
+#
+# - for password with double quotes, enclose in double quotes and prefix every double quote in the password with a backslash \ : 
+#		IMAGE_ROOT_PASSWORD="pswd_WITH_\"dbl\"_quotes"
+#
+# - for password with $, enclose in double quotes and prefix every $ in the password with a backslash \ : 
+#		IMAGE_ROOT_PASSWORD="pswd_with_\$a_"
+IMAGE_ROOT_PASSWORD=""
 
 # **** REQUIRED *****
 #
@@ -91,7 +105,19 @@ IMAGE_ADMIN_USER=clusteradmin
 # and image creation will not proceed.
 # 
 # Make this a really strong password, especially if IMAGE_DISABLE_SSH_PASSWORD_AUTHENTICATION=no
-IMAGE_ADMIN_PASSWORD=
+#
+# Some special characters may require escape prefixing and the password to be enclosed in
+# single or double quotes.
+# Some examples:
+# - for password with spaces, enclose in double quotes 
+#		IMAGE_ADMIN_PASSWORD="a PassworD with spaces"
+#
+# - for password with double quotes, enclose in double quotes and prefix every double quote in the password with a backslash \ : 
+#		IMAGE_ADMIN_PASSWORD="pswd_WITH_\"dbl\"_quotes"
+#
+# - for password with $, enclose in double quotes and prefix every $ in the password with a backslash \ : 
+#		IMAGE_ADMIN_PASSWORD="pswd_with_\$a_"
+IMAGE_ADMIN_PASSWORD=""
 
 # **** OPTIONAL, used only if IMAGE_ADMIN_USER is defined *****
 #
