--- a/storm-image-example.conf
+++ b/storm-image-example.conf
@@ -35,7 +35,21 @@ DATACENTER_FOR_IMAGE="newark"
 #
 # Default root password for all nodes in cluster created from this image.
 # It can be overridden in each cluster's config file.
-IMAGE_ROOT_PASSWORD=
+# It should contain at least two of these four character classes: 
+# lower case letters - upper case letters - numbers - punctuation.
+#
+# Some special characters may require escape prefixing and the password to be enclosed in
+# single or double quotes.
+# Some examples:
+# - for password with spaces, enclose in double quotes 
+#		IMAGE_ROOT_PASSWORD="a PassworD with spaces"
+#
+# - for password with double quotes, enclose in double quotes and prefix every double quote in the password with a backslash \ : 
+#		IMAGE_ROOT_PASSWORD="pswd_WITH_\"dbl\"_quotes"
+#
+# - for password with $, enclose in double quotes and prefix every $ in the password with a backslash \ : 
+#		IMAGE_ROOT_PASSWORD="pswd_with_\$a_"
+IMAGE_ROOT_PASSWORD=""
 
 # **** REQUIRED *****
 #
@@ -69,7 +83,19 @@ IMAGE_ADMIN_USER=clusteradmin
 # Password for IMAGE_ADMIN_USER. 
 # This should not be empty. If it is, it's considered a validation error
 # and image creation will not proceed.
-IMAGE_ADMIN_PASSWORD=
+#
+# Some special characters may require escape prefixing and the password to be enclosed in
+# single or double quotes.
+# Some examples:
+# - for password with spaces, enclose in double quotes 
+#		IMAGE_ADMIN_PASSWORD="a PassworD with spaces"
+#
+# - for password with double quotes, enclose in double quotes and prefix every double quote in the password with a backslash \ : 
+#		IMAGE_ADMIN_PASSWORD="pswd_WITH_\"dbl\"_quotes"
+#
+# - for password with $, enclose in double quotes and prefix every $ in the password with a backslash \ : 
+#		IMAGE_ADMIN_PASSWORD="pswd_with_\$a_"
+IMAGE_ADMIN_PASSWORD=""
 
 # **** REQUIRED *****
 #
