Support Linode instance type changes (https://github.com/pathbreak/storm-linode/issues/1)

--- a/zk-cluster-example.conf
+++ b/zk-cluster-example.conf
@@ -22,11 +22,11 @@ DATACENTER_FOR_CLUSTER="newark"
 
 # The types and number of nodes that constitute this cluster. 
 # Choose wisely, because a ZK cluster can't be expanded easily (dynamic
-# reconfiguration is available only from 3.5.0 but it's not yet supported
+# reconfiguration is available only from Zookeeper v3.5.0 but it's not yet supported
 # by our cluster script)
 #
 # Syntax is: "<plan>:<count> <plan>:<count> ...."
-# where <plan> is a plan from https://www.linode.com/pricing : "1GB | 2GB | 4GB ...."
+# where <plan> is a plan from https://www.linode.com/pricing : "2GB | 4GB | 8GB ...."
 # and count is a numeric count.
 #
 # Total number of nodes in a Zookeeper cluster should be an odd number
@@ -38,12 +38,12 @@ DATACENTER_FOR_CLUSTER="newark"
 # other nodes.
 #
 # Examples: 
-# 1. To create 3 1GB nodes
-# CLUSTER_SIZE="1GB:3"
+# 1. To create 3 2GB nodes
+# CLUSTER_SIZE="2GB:3"
 #
-# 2. To create 3 nodes of different plans - a 1 GB, a 2 GB and a 4 GB
-# CLUSTER_SIZE="1GB:1 2GB:1 4GB:1"
-CLUSTER_SIZE="1GB:3"
+# 2. To create 3 nodes of different plans - a 2 GB, a 4 GB and a 8 GB
+# CLUSTER_SIZE="2GB:1 4GB:1 8GB:1"
+CLUSTER_SIZE="2GB:3"
 
 
 
