Removed CLUSTER_NAME from cluster conf files. The directory name itself is the cluster name.

--- a/zk-cluster-example.conf
+++ b/zk-cluster-example.conf
@@ -1,14 +1,3 @@
-# A unique name for the cluster. Since this is used as a prefix for cluster management files,
-# it should be unique.
-# Rules:
-# - Cannot be empty
-# - Maximum 25 characters in length (this constraint is mainly 
-#		due to its use as a prefix for iptables ipset names, which can't be >31 characters)
-# - Alphabets, digits, hyphens, underscores only
-# - No spaces
-# - No other special characters
-CLUSTER_NAME='zk-cluster-example'
-
 # The datacenter where this cluster should be created.
 # This can be any datacenter, but cluster creation may be faster 
 # if the image is created in the same datacenter where cluster will be
@@ -27,7 +16,8 @@ DATACENTER_FOR_CLUSTER="newark"
 #
 # Syntax is: "<plan>:<count> <plan>:<count> ...."
 # where <plan> is a plan from https://www.linode.com/pricing : "2GB | 4GB | 8GB ...."
-# and count is a numeric count.
+# and count is a numeric count. 
+# Run './zookeeper-cluster-linode.sh plans <API-ENV-CONF>' to see list of available plans.
 #
 # Total number of nodes in a Zookeeper cluster should be an odd number
 # and very large clusters are discouraged. 
@@ -47,9 +37,13 @@ CLUSTER_SIZE="2GB:3"
 
 
 
-# The image conf file to use as a template for creating nodes of this cluster.
+# The image directory or image conf file to use as a template for creating nodes of this cluster.
+# Path should be relative to this cluster directory, or an absolute path.
 # Every node's disk will be a replica of this image.
-ZK_IMAGE_CONF=../zk-image-example/zk-image-example.conf
+# Examples:
+# ZK_IMAGE_CONF=../zk-image-example
+# ZK_IMAGE_CONF=../zk-image-example/zk-image-example.conf
+ZK_IMAGE_CONF=../zk-image-example
 
 
 NODE_DISK_SIZE=5000
