Removed CLUSTER_NAME from cluster conf files.

--- a/storm-cluster-example.conf
+++ b/storm-cluster-example.conf
@@ -1,14 +1,3 @@
-# A unique name for the cluster. Since this is used as a prefix for cluster management files,
-# it should be unique.
-# Rules:
-# - Cannot be empty
-# - Maximum 25 characters in length (this constraint is mainly 
-#		due to its use as a prefix for iptables ipset names, which can't be >31 characters)
-# - Alphabets, digits, hyphens, underscores only
-# - No spaces
-# - No other special characters
-CLUSTER_NAME='storm-cluster-example'
-
 # The datacenter where this cluster should be created.
 # This can be any datacenter, but cluster creation may be faster 
 # if it's created in the same datacenter as the image.
@@ -51,9 +40,27 @@ SUPERVISOR_NODES="2GB:2"
 #  where <plan> is a plan from https://www.linode.com/pricing : "2GB | 4GB | 8GB ...."
 CLIENT_NODE="2GB"
 
+# ** REQUIRED **
+#
 # The image conf file to use as a template for creating nodes of this cluster.
 # Every node's disk will be a replica of this image.
-STORM_IMAGE_CONF=../storm-image-example/storm-image-example.conf
+# Path should be relative to this cluster directory, or an absolute path.
+# Examples:
+# STORM_IMAGE_CONF=../storm-image1
+# STORM_IMAGE_CONF=../storm-image1/storm-image1.conf
+# STORM_IMAGE_CONF=/home/clustermgr/storm-linode/storm-image1
+STORM_IMAGE_CONF=
+
+# ** REQUIRED **
+#
+# The zookeeper conf file path *should* include a directory (even if it's just ./), because it gets included as a source file
+# in the script.
+# Path should be relative to this cluster directory, or an absolute path.
+# Examples:
+# ZOOKEEPER_CLUSTER=../zk-cluster1
+# ZOOKEEPER_CLUSTER=../zk-cluster1/zk-cluster1.conf
+# ZOOKEEPER_CLUSTER=/home/clustermgr/storm-linode/zk-cluster1
+ZOOKEEPER_CLUSTER=
 
 
 NODE_DISK_SIZE=5000
@@ -99,11 +106,6 @@ CLIENT_NODES_PRIVATE_HOSTNAME_PREFIX=$CLUSTER_NAME-private-client
 # If cluster manager machine is also a linode in same datacenter as cluster nodes, comment
 # this out or set it to false so that only private IPs are used. 
 CLUSTER_MANAGER_USES_PUBLIC_IP=false
-
-# The zookeeper conf file path *should* include a directory (even if it's just ./), because it gets included as a source file
-# in the script.
-ZOOKEEPER_CLUSTER=../zk-cluster-example/zk-cluster-example.conf
-
 
 # Use these template iptables rules to create rules for the cluster.
 IPTABLES_V4_RULES_TEMPLATE=../template-storm-iptables-rules.v4
