--- a/storm-image-example.conf
+++ b/storm-image-example.conf
@@ -1,16 +1,28 @@
 # This a configuration to create a Storm linode disk image which can
 # then be replicated for each node during cluster creation.
 
-# Run as "storm-cluster-linode.sh create-image storm-image.conf api_env_production.conf".
-
 # Specify an OS distribution ID or distribution label. All nodes of a cluster
 # created based on this image will have this distribution.
-# The list of distribution IDs and labels can be obtained by running
-#		"LINODE_KEY=<key> LINODE_API_URL=<url> linode_api.py distributions"
-DISTRIBUTION_FOR_IMAGE=124
-# or alternatively the distribution label (case does not matter)
+#
+# Note: Currently, only Ubuntu 14 and Debian 8 distributions are supported by these scripts.
+# They will likely not work with other distributions.
+#
+# List all distribution IDs and labels with:
+#	"./storm-cluster-linode.sh distributions api_env_production.conf"
+#
+# List only those distributions containing some string like 'ubuntu' with:
+#	"./storm-cluster-linode.sh distributions api_env_production.conf ubuntu"
+# Specify either the distribution ID or the distribution label (case does not matter)
+# For Ubuntu 14.04 LTS:
+# DISTRIBUTION_FOR_IMAGE=124
+# or alternatively 
 # DISTRIBUTION_FOR_IMAGE="Ubuntu 14.04 LTS"
-
+#
+# For Debian 8:
+# DISTRIBUTION_FOR_IMAGE=140
+# or
+# DISTRIBUTION_FOR_IMAGE="Debian 8"
+DISTRIBUTION_FOR_IMAGE=124
 
 # A label for the image, as displayed in "images.list".
 LABEL_FOR_IMAGE="Storm 0.9.5 Ubuntu 14.04 LTS"
