Make ZK_IMAGE_CONF required variable

--- a/zk-cluster-example.conf
+++ b/zk-cluster-example.conf
@@ -36,14 +36,15 @@ DATACENTER_FOR_CLUSTER="newark"
 CLUSTER_SIZE="2GB:3"
 
 
-
+# ** REQUIRED **
+#
 # The image directory or image conf file to use as a template for creating nodes of this cluster.
 # Path should be relative to this cluster directory, or an absolute path.
 # Every node's disk will be a replica of this image.
 # Examples:
-# ZK_IMAGE_CONF=../zk-image-example
-# ZK_IMAGE_CONF=../zk-image-example/zk-image-example.conf
-ZK_IMAGE_CONF=../zk-image-example
+# ZK_IMAGE_CONF=../zk-image1
+# ZK_IMAGE_CONF=../zk-image1/zk-image1.conf
+ZK_IMAGE_CONF=
 
 
 NODE_DISK_SIZE=5000
