Add better configuration examples

--- a/zk-image-example.conf
+++ b/zk-image-example.conf
@@ -4,7 +4,7 @@
 # Specify an OS distribution ID or distribution label. All nodes of a cluster
 # created based on this image will have this distribution.
 #
-# Note: Currently, only Ubuntu distributions are supported by these scripts.
+# Note: Currently, only Ubuntu 14 and Debian 8 distributions are supported by these scripts.
 # They will likely not work with other distributions.
 #
 # List all distribution IDs and labels with:
@@ -12,10 +12,18 @@
 #
 # List only those distributions containing some string like 'ubuntu' with:
 #	"./zookeeper-cluster-linode.sh distributions api_env_production.conf ubuntu"
-DISTRIBUTION_FOR_IMAGE=124
-# or alternatively the distribution label (case does not matter)
+#
+# Specify either the distribution ID or the distribution label (case does not matter)
+# For Ubuntu 14.04 LTS:
+# DISTRIBUTION_FOR_IMAGE=124
+# or alternatively 
 # DISTRIBUTION_FOR_IMAGE="Ubuntu 14.04 LTS"
-
+#
+# For Debian 8:
+# DISTRIBUTION_FOR_IMAGE=140
+# or
+# DISTRIBUTION_FOR_IMAGE="Debian 8"
+DISTRIBUTION_FOR_IMAGE=124
 
 # A label for the template image, as displayed in "images.list".
 LABEL_FOR_IMAGE="Zookeeper 3.4.6 Ubuntu 14.04 LTS"
