Added Ubuntu16.04 LTS support

--- a/zk-cluster-example.conf
+++ b/zk-cluster-example.conf
@@ -75,8 +75,8 @@ NODE_ROOT_SSH_PUBLIC_KEY=
 NODE_ROOT_SSH_PRIVATE_KEY=
 
 
-PUBLIC_HOST_NAME_PREFIX=c1-pub-zknode
-PRIVATE_HOST_NAME_PREFIX=c1-pri-zknode
+PUBLIC_HOST_NAME_PREFIX=$CLUSTER_NAME-pub-zknode
+PRIVATE_HOST_NAME_PREFIX=$CLUSTER_NAME-pri-zknode
 
 # If this is true, then the cluster manager machine is probably outside
 # linode cloud and its private network. So it should use public IPs of linodes for 
