--- a/zk-image-example.conf
+++ b/zk-image-example.conf
@@ -19,6 +19,11 @@
 # or alternatively 
 # DISTRIBUTION_FOR_IMAGE="Ubuntu 14.04 LTS"
 #
+# For Ubuntu 16.04 LTS:
+# DISTRIBUTION_FOR_IMAGE=146
+# or alternatively 
+# DISTRIBUTION_FOR_IMAGE="Ubuntu 16.04 LTS"
+#
 # For Debian 8:
 # DISTRIBUTION_FOR_IMAGE=140
 # or
